# mle-training

./: .flake8  .gitignore  MLproject  MLproject:Zone.Identifier  Solution 3.2 Q2.ipynb  Solution_3.1.ipynb  conda.yml  env.yml  nonstandardcode.py  requirements.txt  setup.cfg  setup.py  train.py  train.py:Zone.Identifier
docs/source/: conf.py  housing_price.rst  modules.rst
housing_price_project_packaging/: Dockerfile  README.md  entrypoint.sh  setup.cfg  setup.py
housing_price_project_packaging/data/processed_dataset/: housing_test.csv  housing_train.csv
housing_price_project_packaging/docs/source/: conf.py  modules.rst
housing_price_project_packaging/enviornment_file/: env.yml  requirements.txt
housing_price_project_packaging/logs/: log.txt
housing_price_project_packaging/models/: LinearRegression.pkl
housing_price_project_packaging/src/housing_price_shreya_kanodia/: ingest_data.py  score.py  train.py
housing_price_project_packaging/src/housing_price_shreya_kanodia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
housing_price_project_packaging/test/unit_tests/: test_ingest_data.py  test_score.py  test_train.py
mlruns/1/: meta.yaml
mlruns/1/331db8269d934d848fdaeae30dfe17d6/: meta.yaml
mlruns/1/66e26ec5468f455881c039b2a866b87f/: meta.yaml
mlruns/1/71f0152fc4114d32a7ddadb6b7c112eb/: meta.yaml
mlruns/1/7e436a87ca594fd9ab60baabd054d4ee/: meta.yaml
mlruns/1/877a1b63def7472dba47ab91e6f7fb54/: meta.yaml
mlruns/1/c5f117aaaf9c4925bd9bf83f736c2fa5/: meta.yaml
mlruns/1/c87ff8978a834714a61bc93373594579/: meta.yaml
mlruns/2/: meta.yaml
(+42 files in other folders)
