[metadata]
name = housing_price_shreya_kanodia
version = 0.3
author = Shreya Kanodia
author_email = shreya.kanodia@tigeranalytics.com
description = Package made for assignment 4.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shreya-kanodia/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

